# dmx-midi-player

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: dos-ci.yml  macos-ci.yml  ubuntu-ci.yml  windows-ci.yml
cmake/: build_props.cmake  library-sdl2.cmake
src/: dos_tman.cpp  dos_tman.h  emu_list.h  flushout.h  interface.h  main.cpp  midi_seq.cpp  midi_seq.h
src/dos/: dos_tman.cpp  dpmi_locks.cpp  dpmi_locks.h
src/fmopl3lib/: opl3class.cpp  opl3class.h
src/fmopl3lib/chips/: chipset.cmake  sync_from.sh
src/seq/: midi_sequencer.h  midi_sequencer.hpp  midi_sequencer_impl.hpp
src/seq/impl/: io_impl.hpp  loop_impl.hpp  mididata_impl.hpp  miditrack_impl.hpp  process_impl.hpp  read_hmi_impl.hpp  read_smf_impl.hpp
src/synthlib/: i_oplmusic.cpp  i_oplmusic.h
